[gd_scene load_steps=5 format=3 uid="uid://bwpitayaf3l0a"]

[ext_resource type="Script" path="res://menu.gd" id="1_blocq"]
[ext_resource type="PackedScene" uid="uid://p371oyaywpqb" path="res://BottomBar.tscn" id="1_rese4"]
[ext_resource type="PackedScene" uid="uid://dnko8hiuwp3us" path="res://start_button.tscn" id="2_4y2vs"]
[ext_resource type="Script" path="res://start_button.gd" id="3_ekk3u"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_blocq")

[node name="BottomBar" parent="." instance=ExtResource("1_rese4")]
layout_mode = 0
anchors_preset = 0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1.0
offset_top = 1741.0
offset_right = 917.0
offset_bottom = 1921.0
grow_horizontal = 1
grow_vertical = 1

[node name="StartButton" parent="." instance=ExtResource("2_4y2vs")]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 380.0
offset_top = 1292.0
offset_right = -400.0
offset_bottom = -528.0
script = ExtResource("3_ekk3u")

[connection signal="button_up" from="StartButton" to="." method="_on_start_button_button_up"]
